bin/tests/snapshots/repeated_keys__b1a741b37938f70b92df97e0f3aca480_lint_errfmt.snap
---
source: bin/tests/repeated_keys.rs
---
{
  foo.bar = 1;
  foo.baz."hello" = 1;
  foo.again = 1;
}
---
<temp_file_path>>2:3:W:20:[repeated_keys] The key `foo` is first assigned here ...
<temp_file_path>>3:3:W:20:[repeated_keys] ... repeated here ...
<temp_file_path>>4:3:W:20:[repeated_keys] ... and here. Try `foo = { bar=...; baz."hello"=...; again=...; }` instead.
