bin/tests/snapshots/repeated_keys__b1a741b37938f70b92df97e0f3aca480_lint_stderr.snap
---
source: bin/tests/repeated_keys.rs
---
{
  foo.bar = 1;
  foo.baz."hello" = 1;
  foo.again = 1;
}
---
[20] Warning: Avoid repeated keys in attribute sets
   ╭─[ <temp_file_path>:2:3 ]
   │
 2 │   foo.bar = 1;
   │   ───┬───  
   │      ╰───── The key foo is first assigned here ...
 3 │   foo.baz."hello" = 1;
   │   ───────┬───────  
   │          ╰───────── ... repeated here ...
 4 │   foo.again = 1;
   │   ────┬────  
   │       ╰────── ... and here. Try foo = { bar=...; baz."hello"=...; again=...; } instead.
───╯
