bin/tests/snapshots/repeated_keys__fix_107c49dd2c0b84878c81852acfd4aee37038d8367b6bc7f5b43ce051c24908e5.snap
---
source: bin/tests/repeated_keys.rs
---
expression:
{
  foo.bar = 1;
  foo.bar."hello" = 1;
  foo.again = 1;
}

---
