bin/tests/snapshots/repeated_keys__fix_653aae0c9fb8b448e30e62c7daa38519eded4ba2078838f788b3e769db564123.snap
---
source: bin/tests/repeated_keys.rs
---
expression:
{
  foo.baz.bar1 = 1;
  foo.baz.bar2 = 2;
  foo.baz.bar3 = 3;
  foo.baz.bar4 = 4;
  foo.baz.bar5 = 5;
}

---
