bin/tests/snapshots/repeated_keys__fix_b1a741b37938f70b92df97e0f3aca480051d7b411835826a852a5288e2c167f9.snap
---
source: bin/tests/repeated_keys.rs
---
{
  foo.bar = 1;
  foo.baz."hello" = 1;
  foo.again = 1;
}
---
