bin/tests/snapshots/repeated_keys__lint_653aae0c9fb8b448e30e62c7daa38519eded4ba2078838f788b3e769db564123.snap
---
source: bin/tests/repeated_keys.rs
---
expression:
{
  foo.baz.bar1 = 1;
  foo.baz.bar2 = 2;
  foo.baz.bar3 = 3;
  foo.baz.bar4 = 4;
  foo.baz.bar5 = 5;
}

---
[W20] Warning: Avoid repeated keys in attribute sets
   ╭─[<temp_file_path>:2:3]
   │
 2 │   foo.baz.bar1 = 1;
   ·   ──────┬─────  
   ·         ╰─────── The key foo is first assigned here ...
 3 │   foo.baz.bar2 = 2;
   ·   ──────┬─────  
   ·         ╰─────── ... repeated here ...
 4 │   foo.baz.bar3 = 3;
   ·   ──────┬─────  
   ·         ╰─────── ... and here (2 occurrences omitted). Try foo = { baz.bar1=...; baz.bar2=...; baz.bar3=...; } instead.
───╯
